--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -276,7 +276,7 @@ label.MuiRating-label {
   }
 } */
 
-
+/* 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 * {
   padding: 0;
@@ -300,7 +300,7 @@ body {
   }
   button {
     border-radius: 5px;
-    padding: 17px 30px;
+    padding: 10px 15px;
     background: #6d28d9;
     border: none;
     color: #fff;
@@ -445,4 +445,10 @@ body {
     .back {
       height: 30vh;
     }
-  }
+  } */
+    .logIn{
+      background-color: #6B7280;
+      color: #fff;
+      padding: 1rem 0.75rem;
+      border-radius: 0.5rem;
+    }
