--- a/frontend/src/component/Home/Agent/Team.css
+++ b/frontend/src/component/Home/Agent/Team.css
@@ -1,63 +1,109 @@
-.team .box {
-    background: #ffffff;
-    border-radius: 6px;
-    border: 1px solid rgb(62 28 131 / 10%);
-    padding: 2rem;
-    transition: 0.5s;
-  }
-  .team .box:hover {
-    box-shadow: 0 0 20px 0 rgb(112 121 138 / 18%);
-    cursor: pointer;
-  }
-  .team .details {
-    text-align: center;
-    margin-top: 30px;
-  }
-  .team .img {
-    width: 90px;
-    height: 90px;
-    margin: auto;
-    position: relative;
-  }
-  .team img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
+.section {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.section .heading {
+  font-weight: 500;
+}
 
-  }
-  .team .img i {
-    color: #108be7;
-    font-size: 17px;
-    position: absolute;
-    top: 35px;
-    right: -5px;
-  }
-  .team label {
-    display: inline-block;
-    margin-top: 20px;
-  }
-  .team i {
-    color: grey;
-    margin-right: 5px;
-  }
-  .team ul {
-    display: inline-block;
-    margin-top: 10px;
-  }
-  .team ul li {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    align-items: center;
-    background-color: #f4f5f7;
-    border-radius: 50%;
-    margin: 5px;
-  }
-  .team .button {
-    margin-top: 20px;
-  }
-  .team .button i {
-    color: white;
-    font-size: 20px;
-  }
+.person {
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.person img {
+  position: relative;
+  width: 90px;
+  border-radius: 50%;
+  margin: -45px auto 0 auto;
+}
+.person .person-contents {
+  padding: 30px 30px 10px 30px;
+}
+.person .person-contents h2 {
+  font-size: 18px;
+}
+.person .person-contents h2 a {
+  color: #000000;
+  text-decoration: none;
+}
+.person .person-contents p {
+  font-size: 14px;
+}
+
+.meta {
+  color: #888;
+}
+
+.social a {
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  /* border: #72448d3a; */
+  border-radius: 50%;
+  transition: 0.3s all ease;
+  /* border: 2px solid #72448d3a; */
+  top: 0;
+  text-align: center;
+}
+.social a span {
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-34%, -60%);
+}
+.icon{
+  
+  width: 100%;
+}
+.social a:hover {
+   top: -5px;
+  /* background: transparent; */
+  /* border: 2px solid #fff;  */
+}
+/* .social.dark-hover a:hover {
+  color: #00204a;
+  border: 2px solid #00204a;
+} */
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.name{
+  text-transform: capitalize;
+}
+.spanAgent{
+  text-transform: capitalize;
+  color: #72448d;
+}
+.flower {
+  min-width: 300px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.email{
+  font-size: 1rem;
+  font-weight: 400;
+  color: #72448d;
+  margin-bottom: 1rem;
+  margin-top: 0.3rem;
+}
+.topAgent{
+  color: #72448d;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+.icon{
+  height: 100%;
+  width: 100%;
+}
