dashboard buf fix

--- a/frontend/src/component/Agent/SideBar/agentSidebar.css
+++ b/frontend/src/component/Agent/SideBar/agentSidebar.css
@@ -16,11 +16,11 @@
   padding: 0 !important;
   color: #fff !important;
 }
-.dashboard {
+/* .dashboard {
   font-size: 18px !important;
   text-decoration: none !important;
   color: #fff !important;
-}
+} */
 .sidebar {
   background: #72448d !important;
   height: 100vh;
