--- a/frontend/src/component/loginRegister/forget_password/ForgetPassword.css
+++ b/frontend/src/component/loginRegister/forget_password/ForgetPassword.css
@@ -1,86 +1,94 @@
+:root {
+  font-size: 16px;
+}
+
 .forgotPasswordContainer {
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(231, 231, 231);
-    position: fixed;
-    top: 0%;
-    left: 0;
-  }
-  
-  .forgotPasswordBox {
-    background-color: white;
-    width: 25vw;
-    height: 40vh;
-    box-sizing: border-box;
-    overflow: hidden;
-  }
-  
-  .forgotPasswordHeading {
-    text-align: center;
-    color: rgba(0, 0, 0, 0.664);
-    font: 400 1.3vmax "Roboto";
-    padding: 1.3vmax;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.205);
-    width: 50%;
-    margin: auto;
-  }
-  
-  .forgotPasswordForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-    padding: 2vmax;
-    justify-content: space-evenly;
-    height: 70%;
-    transition: all 0.5s;
-  }
-  
-  .forgotPasswordForm > div {
-    display: flex;
-    width: 100%;
-    align-items: center;
-  }
-  
-  .forgotPasswordForm > div > input {
-    padding: 1vmax 4vmax;
-    padding-right: 1vmax;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.267);
-    border-radius: 4px;
-    font: 300 0.9vmax cursive;
-    outline: none;
-  }
-  
-  .forgotPasswordForm > div > svg {
-    position: absolute;
-    transform: translateX(1vmax);
-    font-size: 1.6vmax;
-    color: rgba(0, 0, 0, 0.623);
-  }
-  
-  .forgotPasswordBtn {
-    border: none;
-    background-color: tomato;
-    color: white;
-    font: 300 0.9vmax "Roboto";
-    width: 100%;
-    padding: 0.8vmax;
-    cursor: pointer;
-    transition: all 0.5s;
-    border-radius: 4px;
-    outline: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
-  }
-  
-  .forgotPasswordBtn:hover {
-    background-color: rgb(179, 66, 46);
-  }
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(231, 231, 231);
+  position: fixed;
+  top: 0%;
+  left: 0;
+}
+
+.forgotPasswordBox {
+  background-color: white;
+  width: 25rem;
+  height: 17rem; 
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.forgotPasswordHeading {
+  text-align: center;
+  color: rgba(0, 0, 0, 0.664);
+  font: 400 1.8rem  "Roboto";
+  padding: 1rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.205);
+  width: 80%;
+  margin: auto;
+}
+
+.forgotPasswordForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto 1.5rem;
+  padding: 0.7rem;
+  justify-content: space-evenly;
+  height: 12rem;
+  transition: all 0.5s;
+}
+
+.forgotPasswordForm > div {
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.forgotPasswordForm > div > input {
+  padding: 1rem 4rem ;
+  padding-right: 1.2rem ;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.267);
+  border-radius: 4px;
+  font: 300 0.5625rem  normal;
+  outline: none;
+  font-size: 1.1rem;
+  margin-left: 0.5rem;
+}
+
+.forgotPasswordForm > div > svg {
+  position: absolute;
+  transform: translateX(1.6rem );
+  font-size: 2.5rem ;
+  color: rgba(0, 0, 0, 0.623);
+}
+
+.forgotPasswordBtn {
+  border: none;
+  background-color: #72448d;
+  color: white;
+  font: 300  "Roboto";
+  width: 100%;
+  cursor: pointer;
+  transition: all 0.5s;
+  border-radius: 4px;
+  outline: none;
+  font-size: 1.3rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
+}
+
+.forgotPasswordBtn:hover {
+  background-color: rgb(179, 66, 46);
+}
+
+
   
   @media screen and (max-width: 600px) {
     .forgotPasswordContainer {
