--- a/frontend/src/component/loginRegister/loginRegister/login.css
+++ b/frontend/src/component/loginRegister/loginRegister/login.css
@@ -110,8 +110,11 @@ font-size: 40px;
 line-height: 45px;
 }
 
-.forget{
+.loginAttribute{
     text-decoration: none;
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: #333;
 }
 .imgsrc{
     height: 40px;
