--- a/frontend/src/more/UserOption.css
+++ b/frontend/src/more/UserOption.css
@@ -1,4 +1,4 @@
-.speedDialIcon{
+.speedDialImage{
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -6,9 +6,12 @@
 }
 .speedDial{
     position: fixed;
-    right: 7rem;
+    right: 8rem;
     top: 8rem;
 }
 .speedDial.active{
     top: 5rem;
+}
+.speedDialIcon{
+    margin-left: 0.6rem;
 }
