--- a/frontend/src/component/Agent/EditProperty/newProperty.css
+++ b/frontend/src/component/Agent/EditProperty/newProperty.css
@@ -7,6 +7,13 @@
     flex-direction: column;
     height: 100vh;
   }
+  .editProperty{
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 0.75rem 0;
+    border: none;
+  }
   .newProductContainer h1 {
     color: rgba(0, 0, 0, 0.733);
     font: 300 2rem "Roboto";
