--- a/frontend/src/component/Property/propertyDetail.css
+++ b/frontend/src/component/Property/propertyDetail.css
@@ -13,6 +13,11 @@
   border-radius: 0.25rem;
   padding: 1rem;
 }
+.custom-text-sm {
+  text-decoration: none;
+  color: black;
+  margin-top: 5rem;
+  }
 span {
   font-size: 1rem;
   font-weight: 500;
